--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -10,3 +10,17 @@ button{
     justify-content: center;
     align-items: center;
 }
+form input,select{
+    width:400px;
+    padding: 5px;
+    border-radius: 5px;
+    border: none;
+}
+
+input,select:focus{
+    outline: none;
+}
+
+button:hover{
+    background-color: aqua;
+}
